name:                adl-compiler-lib
version:             0.1.0.0
synopsis:            A compiler for the Actor Definition Language (ADL)
-- description:         
license:             GPL-2
license-file:        ../LICENSE
author:              Tim Docker
maintainer:          tim@dockerz.net
-- copyright:           
category:            Network
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src
  exposed-modules:   ADL.Compiler.Backends.Haskell, ADL.Compiler.Compiler, ADL.Compiler.AST,
                     ADL.Compiler.Primitive, ADL.Compiler.ParserP, ADL.Compiler.Utils,
                     ADL.Compiler.EIO, ADL.Compiler.Processing
  build-depends:     base ==4.5.*, text ==0.11.*, containers ==0.4.*, bytestring ==0.9.*,
                     parsec ==3.1.*, mtl ==2.1.*, transformers ==0.3.*,
                     filepath, directory, unordered-containers, vector, base64-bytestring,
                     attoparsec, aeson, adl-utils

