name:                adl-compiler
version:             0.1.0.0
synopsis:            A compiler for the Actor Definition Language (ADL)
-- description:         
license:             GPL-2
license-file:        ../LICENSE
author:              Tim Docker
maintainer:          tim@dockerz.net
-- copyright:           
category:            Network
build-type:          Simple
cabal-version:       >=1.8

executable adlc
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base ==4.5.*, text ==0.11.*, containers ==0.4.*, bytestring ==0.9.*,
                       parsec ==3.1.*, mtl ==2.1.*, transformers ==0.3.*,
                       filepath, directory, unordered-containers, vector, base64-bytestring,
                       attoparsec, aeson, adl-utils

executable adlc-tests
  hs-source-dirs:      tests, src
  main-is:             Tests.hs
  build-depends:       base ==4.5.*, text ==0.11.*, containers ==0.4.*, bytestring ==0.9.*,
                       parsec ==3.1.*, mtl ==2.1.*, transformers ==0.3.*,
                       filepath, directory, unordered-containers, vector, base64-bytestring,
                       attoparsec, aeson, adl-utils,
                       temporary, test-framework
