name:                adl-compiler
version:             0.1.0.0
synopsis:            A compiler for the Actor Definition Language (ADL)
-- description:         
license:             GPL-2
license-file:        ../LICENSE
author:              Tim Docker
maintainer:          tim@dockerz.net
-- copyright:           
category:            Network
build-type:          Custom
cabal-version:       >=1.8

data-files:          adl/adlc/config/haskell.adl
                     config/hs-custom-types.json

executable adlc
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base, text, containers, bytestring,
                       parsec, mtl, transformers,
                       filepath, directory, unordered-containers, vector, base64-bytestring,
                       attoparsec, aeson, adl-utils, adl-compiler-lib, adl-runtime

executable adlc-tests
  hs-source-dirs:      tests, src
  main-is:             Tests.hs
  build-depends:       base, text, containers, bytestring,
                       parsec, mtl, transformers,
                       filepath, directory, unordered-containers, vector, base64-bytestring,
                       attoparsec, aeson, adl-utils, adl-compiler-lib, adl-runtime,
                       temporary, test-framework

