name:                adl-example
version:             0.1.0.0
synopsis:            Examples for the Actor Definition Language (ADL)
-- description:         
license:             GPL-2
license-file:        ../LICENSE
author:              Tim Docker
maintainer:          tim@dockerz.net
-- copyright:           
category:            Network
build-type:          Custom
cabal-version:       >=1.8

-- executable psserver
--    main-is:             PSServer.hs
--    ghc-options:         -threaded
--    build-depends:       base ==4.5.*, text ==0.11.*, containers ==0.4.*, bytestring ==0.9.*,
--                         parsec ==3.1.*, mtl ==2.1.*, transformers ==0.3.*,
--                         aeson, unordered-containers, adl-utils, adl-lib, stm, hslogger, time

-- executable psclient
--    main-is:             PSClient.hs
--    ghc-options:         -threaded
--    build-depends:       base ==4.5.*, text ==0.11.*, containers ==0.4.*, bytestring ==0.9.*,
--                         parsec ==3.1.*, mtl ==2.1.*, transformers ==0.3.*,
--                         aeson, unordered-containers, adl-utils, adl-lib, stm, hslogger, time

executable runexample
   main-is:             RunExample.hs
   ghc-options:         -threaded
   build-depends:       base ==4.5.*, text ==0.11.*, containers ==0.4.*, bytestring ==0.9.*,
                        parsec ==3.1.*, mtl ==2.1.*, transformers ==0.3.*,
                        aeson, unordered-containers, adl-utils, adl-runtime, stm, hslogger, time
