name:                adl-example
version:             0.1.0.0
synopsis:            Examples for the Actor Definition Language (ADL)
-- description:         
license:             GPL-2
license-file:        ../LICENSE
author:              Tim Docker
maintainer:          tim@dockerz.net
-- copyright:           
category:            Network
build-type:          Custom
cabal-version:       >=1.8

executable runexample
   main-is:             RunExample.hs
   ghc-options:         -threaded
   build-depends:       base, text, containers, bytestring,
                        parsec, mtl, transformers, old-locale,
                        aeson, unordered-containers, stm, hslogger, time, unix,
                        adl-utils, adl-runtime, adl-comms-http
