name:                adl-lib
version:             0.1.0.0
synopsis:            Runtime library for the Actor Definition Language (ADL)
-- description:         
license:             GPL-2
license-file:        ../LICENSE
author:              Tim Docker
maintainer:          tim@dockerz.net
-- copyright:           
category:            Network
build-type:          Custom
cabal-version:       >=1.8

library
  hs-source-dirs:      src
  exposed-modules:     ADL.Core, ADL.Core.CustomTypes, ADL.Core.Value, ADL.Core.Sink, ADL.Core.Primitives,
                       ADL.Core.Comms,
                       ADL.Core.Comms.Types, ADL.Core.Comms.Types.Internals,
                       ADL.Core.Comms.Null,
                       ADL.Core.Comms.ZMQ, ADL.Core.Comms.ZMQ.Internals,
                       ADL.Core.Comms.HTTP, ADL.Core.Comms.HTTP.Internals,
                       ADL.Core.Comms.Rpc,
                       ADL.Sys.Types, ADL.Sys.Rpc
  build-depends:       base ==4.5.*, text ==0.11.*, containers ==0.4.*, bytestring ==0.9.*,
                       parsec ==3.1.*, mtl ==2.1.*, transformers ==0.3.*,
                       adl-utils,
                       time, network, unordered-containers, aeson, attoparsec, vector, stm, uuid, hslogger,
                       zeromq3-haskell,
                       wai, warp, http-types, resourcet, conduit, network-conduit, http-conduit

