name:                adl-runtime
version:             0.1.0.0
synopsis:            Runtime library for the Actor Definition Language (ADL)
description:         
license:             GPL-2
license-file:        ../LICENSE
author:              Tim Docker
maintainer:          tim@dockerz.net
copyright:           
category:            Network
build-type:          Custom
cabal-version:       >=1.8

data-files:          adl/sys/types.adl,
                     adl/sys/rpc.adl

library
  hs-source-dirs:      src
  exposed-modules:     ADL.Core, ADL.Core.CustomTypes, ADL.Core.Value, ADL.Core.Sink, ADL.Core.Primitives,
                       ADL.Core.Comms, ADL.Core.Comms.Internals,
                       ADL.Core.Comms.Types, ADL.Core.Comms.Types.Internals,
                       ADL.Core.Comms.Null,
                       ADL.Core.Comms.Rpc,
                       ADL.Sys.Types, ADL.Sys.Rpc
  build-depends:       base, text, containers, bytestring,
                       parsec, mtl, transformers,
                       adl-utils,
                       time, network, unordered-containers, aeson, attoparsec, vector, stm, uuid, hslogger,
                       base64-bytestring,
                       network-transport
