name:                adl-comms-http
version:             0.1.0.0
synopsis:            HTTP communication transport for the Actor Definition Language (ADL)
description:         
license:             GPL-2
license-file:        ../../LICENSE
author:              Tim Docker
maintainer:          tim@dockerz.net
copyright:           
category:            Network
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:      src
  exposed-modules:     ADL.Core.Comms.HTTP
  build-depends:       base == 4.6.*, text == 0.11.*, containers == 0.5.*, bytestring == 0.10.*,
                       mtl == 2.1.*, transformers == 0.3.*,
                       time == 1.4.*, network == 2.4.*, unordered-containers == 0.2.*, aeson == 0.6.*, attoparsec == 0.10.*,
                       vector == 0.10.*, stm == 2.4.*, uuid == 1.3.*, hslogger == 1.2.*,
                       wai == 1.4.*, warp == 1.3.*, http-types == 0.8.*, resourcet == 0.4.*, conduit == 1.0.*,
                       network-conduit == 1.0.*, http-conduit == 1.9.*,
                       adl-utils, adl-runtime
