name:                adl-comms-http
version:             0.1.0.0
synopsis:            HTTP communication transport for the Actor Definition Language (ADL)
description:         
license:             GPL-2
license-file:        ../../LICENSE
author:              Tim Docker
maintainer:          tim@dockerz.net
copyright:           (c) 2013, 2014 Tim Docker
category:            Network
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:      src
  exposed-modules:     ADL.Core.Comms.HTTP
  build-depends:       base, text, containers, bytestring,
                       mtl, transformers,
                       time, network, unordered-containers, aeson, attoparsec,
                       vector, stm, uuid, hslogger, data-default,
                       wai, warp, http-types, resourcet, conduit,
                       streaming-commons, network-conduit, http-conduit,
                       adl-utils, adl-runtime
