name:                adl-compiler-bootstrap
version:             0.1.0.0
synopsis:            bootstrap version of the compiler for the Actor Definition Language (ADL)
-- description:         
license:             GPL-2
license-file:        ../../LICENSE
author:              Tim Docker
maintainer:          tim@dockerz.net
-- copyright:           
category:            Network
build-type:          Simple
cabal-version:       >=1.8

executable adlc-bootstrap
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base, text, containers, bytestring,
                       parsec, mtl, transformers,
                       filepath, directory, unordered-containers, vector, base64-bytestring,
                       attoparsec, aeson, adl-utils, adl-compiler-lib
