name:                adl-compiler-bootstrap
version:             0.1.0.0
synopsis:            bootstrap version of the compiler for the Actor Definition Language (ADL)
-- description:         
license:             GPL-2
license-file:        ../../LICENSE
author:              Tim Docker
maintainer:          tim@dockerz.net
copyright:           (c) 2013, 2014 Tim Docker
category:            Network
build-type:          Simple
cabal-version:       >=1.8

executable adlc-bootstrap
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base == 4.6.*, text == 0.11.*, containers == 0.5.*, bytestring == 0.10.*,
                       parsec == 3.1.*, mtl == 2.1.*, transformers == 0.3.*,
                       filepath == 1.3.*, directory == 1.2.*, unordered-containers == 0.2.*, vector == 0.10.*,
                       base64-bytestring == 1.0.*,
                       attoparsec == 0.10.*, aeson == 0.6.*,
                       adl-utils, adl-compiler-lib
