name:                adl-compiler-lib
version:             0.1.0.0
synopsis:            A compiler for the Actor Definition Language (ADL)
-- description:         
license:             GPL-2
license-file:        ../../LICENSE
author:              Tim Docker
maintainer:          tim@dockerz.net
-- copyright:           
category:            Network
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src
  exposed-modules:   ADL.Compiler.AST, ADL.Compiler.Primitive, ADL.Compiler.ParserP,
                     ADL.Compiler.Utils, ADL.Compiler.EIO, ADL.Compiler.Processing,
                     ADL.Compiler.Backends.Verify,
                     ADL.Compiler.Backends.Haskell
  build-depends:     base == 4.6.*, text == 0.11.*, containers == 0.5.*, bytestring == 0.10.*,
                     parsec == 3.1.*, mtl == 2.1.*, transformers == 0.3.*,
                     filepath == 1.3.*, directory == 1.2.*, unordered-containers == 0.2.*, vector == 0.10.*,
                     base64-bytestring == 1.0.*,
                     attoparsec == 0.10.*, aeson == 0.6.*,
                     adl-utils

