name:                adl-compiler-lib
version:             0.1.0.0
synopsis:            A compiler for the Algebraic Data Language (ADL)
-- description:         
license:             BSD3
license-file:        ../../LICENSE
author:              Tim Docker
maintainer:          tim@dockerz.net
copyright:           (c) 2013, 2014 Tim Docker
category:            Network
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src
  exposed-modules:   ADL.Compiler.AST, ADL.Compiler.Primitive, ADL.Compiler.ParserP,
                     ADL.Compiler.Utils, ADL.Compiler.EIO, ADL.Compiler.Processing,
                     ADL.Compiler.Backends.Verify,
                     ADL.Compiler.Backends.Haskell
  build-depends:     base, text, containers, bytestring,
                     parsec, mtl, transformers,
                     filepath, directory, unordered-containers, vector,
                     base64-bytestring,
                     attoparsec, aeson, scientific,
                     adl-utils
  ghc-options:       -fwarn-incomplete-patterns
