name:                adl-compiler
version:             0.10.1
synopsis:            A compiler for the Algebraic Data Language (ADL)
-- description:
license:             BSD3
license-file:        ../../LICENSE
author:              Tim Docker
maintainer:          tim@dockerz.net
copyright:           (c) 2013, 2014 Tim Docker
category:            Network
build-type:          Simple
cabal-version:       >=1.8

data-files:          lib/adl/sys/adlast.adl
                     lib/adl/sys/adlast.adl-java
                     lib/adl/sys/dynamic.adl
                     lib/adl/sys/dynamic.adl-java
                     lib/adl/sys/types.adl
                     lib/adl/sys/types.adl-java
                     lib/adl/sys/types.adl-hs
                     lib/adl/sys/types.adl-cpp
                     lib/adl/sys/annotations.adl
                     lib/adl/adlc/config/haskell.adl
                     lib/adl/adlc/config/cpp.adl
                     lib/adl/adlc/config/java.adl
                     lib/adl/adlc/config/typescript.adl
                     lib/java/runtime/org/adl/runtime/Builders.java
                     lib/java/runtime/org/adl/runtime/ByteArray.java
                     lib/java/runtime/org/adl/runtime/DynamicHelpers.java
                     lib/java/runtime/org/adl/runtime/Factories.java
                     lib/java/runtime/org/adl/runtime/Factory.java
                     lib/java/runtime/org/adl/runtime/HashMapHelpers.java
                     lib/java/runtime/org/adl/runtime/HashSetHelpers.java
                     lib/java/runtime/org/adl/runtime/JsonBinding.java
                     lib/java/runtime/org/adl/runtime/JsonBindings.java
                     lib/java/runtime/org/adl/runtime/JsonHelpers.java
                     lib/java/runtime/org/adl/runtime/JsonParseException.java
                     lib/java/runtime/org/adl/runtime/Lazy.java
                     lib/java/runtime/org/adl/runtime/MaybeHelpers.java
                     lib/haskell/runtime/ADL/Core.hs
                     lib/haskell/runtime/ADL/Core/Value.hs
                     lib/haskell/runtime/ADL/Core/StringMap.hs
                     lib/haskell/runtime/ADL/Core/Nullable.hs
                     lib/typescript/runtime/adl.ts
                     lib/typescript/runtime/json.ts
                     lib/typescript/runtime/utils.ts
                     lib/typescript/runtime/dynamic.ts
                     lib/typescript/runtime/sys/types.ts
                     lib/typescript/runtime/sys/adlast.ts
                     lib/typescript/runtime/sys/dynamic.ts

library
  exposed-modules:    ADL.Compiler.Backends.AST
                    , ADL.Compiler.Backends.Cpp
                    , ADL.Compiler.Backends.Java
                    , ADL.Compiler.Backends.Java.Internal
                    , ADL.Compiler.Backends.Java.Json
                    , ADL.Compiler.Backends.Java.Parcelable
                    , ADL.Compiler.Backends.Javascript
                    , ADL.Compiler.Backends.Typescript
                    , ADL.Compiler.Backends.Typescript.Internal
                    , ADL.Compiler.Backends.Rust
                    , ADL.Compiler.Backends.Rust.Internal
                    , ADL.Compiler.DataFiles
                    , ADL.Adlc.Config.Cpp
                    , ADL.Adlc.Config.Haskell
                    , ADL.Adlc.Config.Java
                    , HaskellCustomTypes
                    , Paths_adl_compiler
  hs-source-dirs:     src
  build-depends:      base
                    , bytestring
                    , cases
                    , text
                    , containers
                    , parsec
                    , mtl
                    , transformers
                    , filepath
                    , directory
                    , unordered-containers
                    , vector
                    , base64-bytestring
                    , attoparsec
                    , aeson
                    , scientific
                    , adl-utils
                    , adl-compiler-lib
                    , adl-runtime
                    , aeson-pretty
                    , executable-path
  ghc-options:       -fwarn-incomplete-patterns

executable adlc
  main-is:            Main.hs
  build-depends:      base
                    , bytestring
                    , text
                    , containers
                    , parsec
                    , mtl
                    , transformers
                    , filepath
                    , directory
                    , unordered-containers
                    , vector
                    , base64-bytestring
                    , attoparsec
                    , aeson
                    , scientific
                    , adl-utils
                    , adl-compiler-lib
                    , adl-runtime
                    , adl-compiler
                    , aeson-pretty
                    , executable-path
  ghc-options:       -fwarn-incomplete-patterns

test-suite adlc-tests
  type:               exitcode-stdio-1.0
  main-is:            Tests.hs
  hs-source-dirs:     tests
  build-depends:      base
                    , bytestring
                    , text
                    , containers
                    , parsec
                    , mtl
                    , transformers
                    , filepath
                    , directory
                    , unordered-containers
                    , hspec
                    , vector
                    , base64-bytestring
                    , attoparsec
                    , aeson
                    , scientific
                    , adl-utils
                    , adl-compiler-lib
                    , adl-runtime
                    , adl-compiler
                    , aeson-pretty
                    , executable-path
                    , stm
                    , temporary
  ghc-options:       -fwarn-incomplete-patterns
